examples/test/testpolicy18070.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18070
  namespace: namespace191
spec:
  podSelector:
    matchLabels:
      key26: value7
      key30: value31
      key32: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value23
          key27: value12
          key40: value27
